# Break-Alarm

./: App.py  README.md  pyproject.toml
src/break_alarm/: ViewModel.py
