[project]
name = "Break-Alarm"
version = "0.1.0"
description = "For Break time."
authors = [
    {name = "vhzkclq0705", email = "vhzkclq0705@naver.com"},
]
dependencies = ["streamlit>=1.42.0", "pytz>=2025.1", "playsound>=1.3.0", "pygame>=2.6.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
